force-app/main/default/objects/Knowledge__kav/fields/File_Upload_2__c.field-meta.xml
<CustomField>
    <fullName>File_Upload_2__c</fullName>
    <label>File Upload 2</label>
    <type>File</type>
</CustomField>