force-app/main/default/objects/Knowledge__kav/fields/File_upload_fileld__c.field-meta.xml
<CustomField>
    <fullName>File_upload_fileld__c</fullName>
    <label>File upload fileld</label>
    <type>File</type>
</CustomField>