force-app/main/default/objects/Knowledge__kav/fields/Full_article__c.field-meta.xml
<CustomField>
    <fullName>Full_article__c</fullName>
    <formula>HYPERLINK(&#39;/category1binking/s/article/&#39; &amp; UrlName,&#39;Full detail&#39;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Full article</label>
    <type>Text</type>
</CustomField>