force-app/main/default/objects/Knowledge__kav/fields/Related_file__c.field-meta.xml
<CustomField>
    <fullName>Related_file__c</fullName>
    <label>Related file</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>